# peachelf-viz

./: Cargo.toml  README.md
peachelf/: Cargo.toml  README.md
peachelf/src/: file.rs  header.rs  lib.rs  parser.rs  program_header.rs  section.rs  types.rs
peachelf/src/file/: elf64.rs
peachelf/src/header/: class.rs  data.rs  elf32.rs  elf64.rs  elf_type.rs  machine.rs  osabi.rs
peachelf/src/program_header/: elf64.rs  header_flag.rs  header_type.rs
peachelf/src/section/: elf32.rs  elf64.rs  section_flag.rs  section_type.rs
src/: main.rs
