[package]
name = "peachelf-viz"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

clap = { version = "4.0.32", features = ["derive"] }
peachelf = { path = "./peachelf" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = [
    "peachelf",
]
