[package]
name = "peachelf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple ELF library for parsing/generating"
repository = "https://github.com/Drumato/peachelf-viz"
readme = "README.md"
documentation = "https://docs.rs/peachelf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
anyhow = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

